--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Showing selected article</h1>
-
+<%=link_to "Edit Article", edit_article_path(@article) %>
 <p>Title: <%=@article.title %></p>
 <p>Description: <%=@article.description %></p>
+
+<%=link_to "Back to articles listing", articles_path %>
