--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<h1>This is the home page</h1>
-<%=link_to 'about', about_path %>
-<%=link_to 'Alpha Blog', articles_path %>
+<div class = "center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%=link_to"Sign Up Now", "#", class: "btn btn-danger btn-lg btn-xlarge"%>
+</div>
