style flash messages

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-  <h2>The following errors prevented the article from being created:</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class="row">
   <div class="col-xs-12">
@@ -35,8 +28,8 @@
 
     <% end %>
     <div class="col-xs-4 col-xs-offset-4">
-    [<%= link_to "Cancel and return to articles listing", articles_path %>]
+      [<%= link_to "Cancel and return to articles listing", articles_path %>]
+    </div>
   </div>
-</div>
 </div>
 
